baml_language/crates/baml_tests/snapshots/diagnostic_errors/parser_constructors/baml_tests__parser_constructors__02_parser__class_constructor.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF
    KW_CLASS "class"
    WORD "Point"
    L_BRACE "{"
    FIELD
      WORD "x"
      TYPE_EXPR "int"
        WORD "int"
    FIELD
      WORD "y"
      TYPE_EXPR "int"
        WORD "int"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "Vec2D"
    L_BRACE "{"
    FIELD
      WORD "p"
      TYPE_EXPR "Point"
        WORD "Point"
    FIELD
      WORD "q"
      TYPE_EXPR "Point"
        WORD "Point"
    R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "point"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "Point"
      WORD "Point"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        OBJECT_LITERAL
          WORD "Point"
          L_BRACE "{"
          OBJECT_FIELD "x: 1"
            WORD "x"
            COLON ":"
            INTEGER_LITERAL "1"
          COMMA ","
          OBJECT_FIELD "y: 2"
            WORD "y"
            COLON ":"
            INTEGER_LITERAL "2"
          R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "vec2d"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "Vec2D"
      WORD "Vec2D"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        OBJECT_LITERAL
          WORD "Vec2D"
          L_BRACE "{"
          OBJECT_FIELD
            WORD "p"
            COLON ":"
            OBJECT_LITERAL
              WORD "Point"
              L_BRACE "{"
              OBJECT_FIELD "x: 1"
                WORD "x"
                COLON ":"
                INTEGER_LITERAL "1"
              COMMA ","
              OBJECT_FIELD "y: 2"
                WORD "y"
                COLON ":"
                INTEGER_LITERAL "2"
              R_BRACE "}"
          COMMA ","
          OBJECT_FIELD
            WORD "q"
            COLON ":"
            OBJECT_LITERAL
              WORD "Point"
              L_BRACE "{"
              OBJECT_FIELD "x: 3"
                WORD "x"
                COLON ":"
                INTEGER_LITERAL "3"
              COMMA ","
              OBJECT_FIELD "y: 4"
                WORD "y"
                COLON ":"
                INTEGER_LITERAL "4"
              R_BRACE "}"
          R_BRACE "}"
        R_BRACE "}"

=== ERRORS ===
None
